# blackmatter-shell

./: .envrc  .gitignore  .typescape.yaml  CLAUDE.md  README.md  container.nix  flake.nix  package.nix
.github/workflows/: container.yml
lib/: plugin-loader.rs  shell-helper.nix
lib/bm-guard/: Cargo.toml
lib/shell-engine/: Cargo.toml
lib/shell-engine/src/: main.rs
module/: default.nix
module/direnv-lib/: default.nix  tend.sh  workspace.sh
module/groups/: default.nix
module/groups/aliases/: init.zsh
module/groups/common/: settings.zsh
module/groups/completion/: init.zsh
module/groups/editor/: init.zsh
module/groups/functions/: init.zsh
module/groups/functions/autoload/: b64decode  b64encode  backup  bench  calc  compress  dirsize  docker-clean  duh  extract  fcd  fco  fd-dir  ff  fkill  fvim  gac  gacp  gct  genpass  git-clean-branches  grepc  histstat  json  kexec  killport  klog  localip  myip  nix-info  nix-shell-pkg  pingweb  serve  urldecode  urlencode  weather
module/plugins/: registry.nix
module/plugins/ajeetdsouza/zoxide/: default.nix
module/plugins/aloxaf/fzf-tab/: default.nix
module/plugins/atuinsh/atuin/: default.nix
module/plugins/direnv/direnv/: default.nix
module/plugins/junegunn/fzf/: default.nix
module/plugins/skim-rs/skim/: default.nix
module/plugins/skim-rs/skim-tab-complete/: default.nix
module/plugins/starship/starship/: default.nix
module/plugins/zsh-users/zsh-autosuggestions/: default.nix
module/tools/: default.nix
module/zsh/: default.nix
tests/: completion-tests.zsh
(+13 files in other folders)
