[package]
name = "bm-shell-engine"
version = "0.1.0"
edition = "2021"
description = "Shell initialization engine — reads JSON manifest, outputs zsh source commands"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
