[package]
name = "bm-shell-engine"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Shell initialization engine — reads JSON manifest, outputs zsh source commands"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints.clippy]
pedantic = "warn"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
